syntax = "proto3";
package bitsong.fantoken.v1beta1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/bitsongofficial/go-bitsong/x/fantoken/types";
option (gogoproto.goproto_getters_all) = false;

message Metadata {
  // name defines the name of the fantoken (eg: Kitty Punk)
  string name = 1;

  // symbol is the token symbol usually shown on exchanges (eg: KITTY)
  string symbol = 2;

  // URI to a document (on or off-chain) that contains additional
  // information.Optional.
  string uri = 3 [ (gogoproto.customname) = "URI" ];
}

// FanToken defines a standard for the fungible token
message FanToken {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  // denom represents the string name of the given denom unit (e.g ft<hash>).
  string denom = 1;

  string max_supply = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"max_supply\"",
    (gogoproto.nullable) = false
  ];

  bool mintable = 3;

  string authority = 4;

  Metadata meta_data = 5 [
    (gogoproto.moretags) = "yaml:\"meta_data\"",
    (gogoproto.nullable) = false
  ];
}